src/test/resources/programs/invalid/InvalidProgram.kool
var a: Int = "hej" // res: T2000
var b: Int = "hej" // res: T2000
var c: Int = "hej" // res: T2000

c.hej() // res: T2002